added pkg dir and ssh keys

--- a/templates/home/bash_profile.erb
+++ b/templates/home/bash_profile.erb
@@ -1,2 +1,27 @@
+# Set Users path
 export PATH=$PATH:<%= scope.lookupvar('hadoop::params::java_home') %>/bin:<%= scope.lookupvar('hadoop::params::hadoop_base') %>/hadoop/bin
+
+# Set Hadoop-related environment variables
+export HADOOP_HOME=<%= scope.lookupvar('hadoop::params::hadoop_base') %>/hadoop
+
+# Set JAVA_HOME (we will also configure JAVA_HOME directly for Hadoop later on)
 export JAVA_HOME=<%= scope.lookupvar('hadoop::params::java_home') %>
+
+# Some convenient aliases and functions for running Hadoop-related commands
+unalias fs &> /dev/null
+alias fs="hadoop fs"
+unalias hls &> /dev/null
+alias hls="fs -ls"
+
+# If you have LZO compression enabled in your Hadoop cluster and
+# compress job outputs with LZOP (not covered in this tutorial):
+# Conveniently inspect an LZOP compressed file from the command
+# line; run via:
+#
+# $ lzohead /hdfs/path/to/lzop/compressed/file.lzo
+#
+# Requires installed 'lzop' command.
+#
+lzohead () {
+    hadoop fs -cat $1 | lzop -dc | head -1000 | less
+}
