Tweak ssh script and its permisions

--- a/templates/bin/ssh_initilize.sh.erb
+++ b/templates/bin/ssh_initilize.sh.erb
@@ -4,4 +4,4 @@
 ssh -o StrictHostKeyChecking=no <%= var %> ls
 <% end -%>
 
-ssh -o StrictHostKeyChecking=no <%= scope.lookupvar('hadoop::params::master') %>
+ssh -o StrictHostKeyChecking=no <%= scope.lookupvar('hadoop::params::master') %> ls
