--- a/templates/conf/hdfs-site.xml.erb
+++ b/templates/conf/hdfs-site.xml.erb
@@ -9,4 +9,8 @@
   The default is used if replication is not specified in create time.
   </description>
 </property>
+<property>
+  <name>dfs.permissions</name>
+  <value><%= scope.lookupvar('hadoop::params::hdfs_permisions') %></value>
+</property>
 </configuration>
